Compressed images and fixed margin problem for author pictures on mobile

--- a/PrixDG/stylesMobile.css
+++ b/PrixDG/stylesMobile.css
@@ -514,7 +514,7 @@ li.booklist-item:not(.booklist-last)::after
     margin-right: auto;
     margin-left: auto;
     margin-bottom: 30px;
-    margin-top: 0px;
+    margin-top: 30px;
     float: none;
     display: block;
     
